force-app/main/default/objects/Campaign/fields/Ad_Platform__c.field-meta.xml
<CustomField>
    <fullName>Ad_Platform__c</fullName>
    <label>Ad Platform</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>