force-app/main/default/objects/Campaign/fields/Ad_Type__c.field-meta.xml
<CustomField>
    <fullName>Ad_Type__c</fullName>
    <label>Ad Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banner Ad</fullName>
                <default>true</default>
                <label>Banner Ad</label>
            </value>
            <value>
                <fullName>Video Ad</fullName>
            </value>
            <value>
                <fullName>1st Party Email</fullName>
            </value>
            <value>
                <fullName>3rd Party Email</fullName>
            </value>
            <value>
                <fullName>Internal Email</fullName>
            </value>
            <value>
                <fullName>Email Ads</fullName>
            </value>
            <value>
                <fullName>Integration Marketing</fullName>
            </value>
            <value>
                <fullName>Pop-up</fullName>
            </value>
            <value>
                <fullName>Drop down/Scroll up</fullName>
            </value>
            <value>
                <fullName>Exit Pop</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Text Post</fullName>
            </value>
            <value>
                <fullName>Image Post</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>White Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>