force-app/main/default/objects/Campaign/fields/Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Apex_Job_Id__c</fullName>
    <label>Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>