force-app/main/default/objects/Campaign/fields/Average_Customer_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Customer_Value__c</fullName>
    <formula>IF(NumberOfContacts > 0, Total_Customers_Value__c / NumberOfContacts, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total_Customers_Value__c / NumberOfContacts</inlineHelpText>
    <label>Average Customer Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>