force-app/main/default/objects/Campaign/fields/Average_Customer_Value_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Average_Customer_Value_Hierarchy__c</fullName>
    <formula>IF(HierarchyNumberOfContacts > 0, Total_Customers_Value_Hierarchy__c / HierarchyNumberOfContacts, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Customer Value in Hierarchy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>