force-app/main/default/objects/Campaign/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Autumn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>