force-app/main/default/objects/Campaign/fields/Buying_Type__c.field-meta.xml
<CustomField>
    <fullName>Buying_Type__c</fullName>
    <label>Buying Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPC</fullName>
                <default>true</default>
                <label>CPC</label>
            </value>
            <value>
                <fullName>CPM</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>