force-app/main/default/objects/Campaign/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>Additional information to be placed in UTM_Campaign field</description>
    <inlineHelpText>Additional information to be placed in UTM_Campaign field</inlineHelpText>
    <label>Campaign Addition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>