force-app/main/default/objects/Campaign/fields/Campaign_Goal__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Goal__c</fullName>
    <label>Campaign Goal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead Generation - Cold Traffic</fullName>
            </value>
            <value>
                <fullName>Lead Generation - Warm Traffic</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Customer Acquisition - Cold Traffic</fullName>
            </value>
            <value>
                <fullName>Customer Acquisition - Warm Traffic</fullName>
            </value>
            <value>
                <fullName>Brand Building</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Win Back</fullName>
            </value>
            <value>
                <fullName>Replenishment</fullName>
            </value>
            <value>
                <fullName>Monetize</fullName>
            </value>
            <value>
                <fullName>Abandonment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>