force-app/main/default/objects/Campaign/fields/Campaign_Level__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Level__c</fullName>
    <label>Campaign Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>