force-app/main/default/objects/Campaign/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>80</length>
    <type>Text</type>
</CustomField>