force-app/main/default/objects/Campaign/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <label>Landing Page</label>
    <required>true</required>
    <type>Url</type>
</CustomField>