force-app/main/default/objects/Campaign/fields/Lead_CTL_Avg__c.field-meta.xml
<CustomField>
    <fullName>Lead_CTL_Avg__c</fullName>
    <formula>IF(NumberOfConvertedLeads > 0, Lead_CTL_Sum__c / NumberOfConvertedLeads, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lead_CTL_Sum__c / NumberOfConvertedLeads</inlineHelpText>
    <label>Avg Days to Convert Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>