force-app/main/default/objects/Campaign/fields/Lead_CTL_Avg_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Lead_CTL_Avg_Hierarchy__c</fullName>
    <formula>IF(HierarchyNumberOfConvertedLeads > 0, Lead_CTL_Sum_Hierarchy__c / HierarchyNumberOfConvertedLeads, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lead_CTL_Sum_Hierarchy__c / HierarchyNumberOfConvertedLeads</inlineHelpText>
    <label>Avg Days to Convert Lead in Hierarchy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>