force-app/main/default/objects/Campaign/fields/Lead_CTL_Sum_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Lead_CTL_Sum_Hierarchy__c</fullName>
    <label>Sum Days to Convert Lead in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>