force-app/main/default/objects/Campaign/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <length>80</length>
    <type>Text</type>
</CustomField>