force-app/main/default/objects/Campaign/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <inlineHelpText>Roll-Up Summary (SUM Campaign Cost)</inlineHelpText>
    <label>Total Cost</label>
    <summarizedField>Campaign_Cost__c.Cost__c</summarizedField>
    <summaryForeignKey>Campaign_Cost__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>