force-app/main/default/objects/Campaign/fields/Total_CPA__c.field-meta.xml
<CustomField>
    <fullName>Total_CPA__c</fullName>
    <description>Cost Per Acquisition is a required formula field on the campaign that takes the Total Costs/Total Orders assuming the Total Costs is the summary value of the related costs fields</description>
    <formula>IF(NumberOfContacts > 0, ActualCost /  NumberOfContacts, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ActualCost /  NumberOfContacts</inlineHelpText>
    <label>Total CPA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>