force-app/main/default/objects/Campaign/fields/Total_CPL__c.field-meta.xml
<CustomField>
    <fullName>Total_CPL__c</fullName>
    <formula>IF(AND(NumberOfContacts > 0, NumberOfLeads > 0), ActualCost / (NumberOfContacts + NumberOfLeads), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ActualCost / (NumberOfContacts + NumberOfLeads</inlineHelpText>
    <label>Total CPL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>