force-app/main/default/objects/Campaign/fields/Total_CPL_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Total_CPL_Hierarchy__c</fullName>
    <formula>IF(AND(HierarchyNumberOfContacts > 0, HierarchyNumberOfLeads > 0), HierarchyActualCost / (HierarchyNumberOfContacts + HierarchyNumberOfLeads), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>HierarchyActualCost / (HierarchyNumberOfContacts + HierarchyNumberOfLeads)</inlineHelpText>
    <label>Total CPL in Hierarchy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>