force-app/main/default/objects/Campaign/fields/Total_CPO__c.field-meta.xml
<CustomField>
    <fullName>Total_CPO__c</fullName>
    <description>Cost Per Orders is a required formula field on the campaign that takes the Total Costs/Total Orders assuming the Total Costs is the summary value of the related costs fields</description>
    <formula>IF(Total_Orders__c > 0, ActualCost / Total_Orders__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ActualCost / Total_Orders__c</inlineHelpText>
    <label>Total CPO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>