force-app/main/default/objects/Campaign/fields/Total_Orders_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders_Hierarchy__c</fullName>
    <label>Total Orders in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>