force-app/main/default/objects/Campaign/fields/Total_Orders_Value_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders_Value_Hierarchy__c</fullName>
    <label>Total Orders Value in Hierarchy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>