force-app/main/default/objects/Campaign/fields/Total_ROI__c.field-meta.xml
<CustomField>
    <fullName>Total_ROI__c</fullName>
    <description>The calculated Return on Investment is a Total Orders Value/Total Costs assuming the Total Costs is the summary value of the related costs fields.</description>
    <formula>IF(ActualCost > 0, (Total_Orders_Value__c - ActualCost) / ActualCost, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Total_Orders_Value__c - ActualCost) / ActualCost</inlineHelpText>
    <label>Total ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>