force-app/main/default/objects/Campaign/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <formula>SUBSTITUTE( Name , " ", "") &amp; TRIM( Campaign__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTM_Campaign</label>
    <type>Text</type>
</CustomField>