force-app/main/default/objects/Campaign/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <description>Ad Type + additional information for utm_content field</description>
    <formula>SUBSTITUTE(TEXT( Ad_Type__c ), " ", "")    &amp; trim( Content__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ad Type + additional information for utm_content field</inlineHelpText>
    <label>UTM_Content</label>
    <type>Text</type>
</CustomField>