force-app/main/default/objects/Campaign/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <formula>TEXT( Buying_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTM_Medium</label>
    <type>Text</type>
</CustomField>