force-app/main/default/objects/Campaign/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <formula>TRIM( Ad_Platform__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTM_Source</label>
    <type>Text</type>
</CustomField>